changed colors, fixed some bugs related to arrow keys and shift and ctrl

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,18 @@
+/*
 :root {
 	--background: #313131;
 	--text: #F5E6C8;
 	--sub-color: #F66E0D;
 	--hover-color: #E72D2D;
 	--caret-color: white;
+}
+*/
+:root {
+	--background: #000d30;
+	--text: #ffffff;
+	--sub-color: #00899b;
+	--hover-color: #00f0f8;
+	--caret-color: var(--text);
 }
 
 * {
@@ -13,7 +22,7 @@
 }
 
 .correct {
-	color: rgba(2, 148, 2, 0.336);
+	color: rgb(0,240,248, 0.336);
 }
 
 .error {
@@ -101,7 +110,7 @@ li a {
 }
 
 #typing-input:focus ~ #typingarea > #textdisplay > word > letter.correct{
-	color: rgb(4, 255, 4);
+	color: var(--hover-color);
 }
 
 #typing-input:focus ~ #typingarea > #textdisplay > word > letter.error{
@@ -373,7 +382,7 @@ form {
 
 #analysis-container {
 	position: relative;
-	top: 50px;
+	top: 0px;
 }
 
 #statsstatus {
@@ -390,7 +399,8 @@ form {
 }
 
 #statsOperators{
-	margin: auto 5px;
+	margin-top: 100px;
+	margin-bottom: 5px;
 	display: block;
 	text-align: center;
 }
@@ -450,13 +460,17 @@ form {
 
 @keyframes caretFlash {
 	0% {border-left-color: var(--caret-color)}
-	50% {border-left-color: rgba(255, 255, 255, 0)}
+	50% {border-left-color: var(--background)}
 	100% {border-left-color: var(--caret-color)}
 }
 
 @keyframes rightCaretFlash {
 	0% {border-right-color: var(--caret-color)}
-	50% {border-right-color: rgba(255, 255, 255, 0)}
+	50% {border-right-color: var(--background)}
 	100% {border-right-color: var(--caret-color)}
+}
+
+#typing-container {
+	margin-bottom: 50px;
 }
 
